<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.savonikaleksandr.scaner.ui.scan.ScanFragment"
        android:label="@string/menu_scanner"
        tools:layout="@layout/fragment_scaner_object" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.savonikaleksandr.scaner.ui.list.ListFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_list_object" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.savonikaleksandr.scaner.ui.add.AddFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_add_object" />
</navigation>