<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".ItemActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/object_image"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/image_3d_model_text"
                        android:textSize="18sp"
                        app:layout_constraintTop_toTopOf="@+id/object_image" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/but_edit_im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    app:cornerRadius="5dp"
                    app:strokeColor="@color/teal_700"
                    app:strokeWidth="2dp"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:text="@string/edit_im"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageQR"
                        android:layout_width="match_parent"
                        android:layout_height="355dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
/>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qr_cod"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageQR" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/send_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cornerRadius="5dp"
                    app:strokeColor="@color/teal_700"
                    app:strokeWidth="2dp"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:text="@string/send_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/text_lab_obj" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:tint="@color/teal_700"
                        app:srcCompat="@drawable/ic_3d_file"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/view_but"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="15dp"
                            android:text="@string/watch_model"
                            android:textAllCaps="false"
                            android:textSize="18sp"
                            app:cornerRadius="5dp"
                            app:strokeColor="@color/teal_700"
                            app:strokeWidth="2dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/change_object"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/changeOb_but"
                            android:textAllCaps="false"
                            android:textSize="18sp"
                            app:cornerRadius="5dp"
                            app:strokeColor="@color/teal_700"
                            app:strokeWidth="2dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="25dp"
            android:imeOptions="flagNoExtractUi"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/information_label" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title_obj_info"
                        android:imeOptions="flagNoExtractUi"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/substring_add_card">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sub_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/edit_but"
                        android:enabled="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:cornerRadius="5dp"
                        app:strokeColor="@color/teal_700"
                        app:strokeWidth="2dp"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:text="@string/edit_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/dell_but"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:cornerRadius="5dp"
                        app:strokeColor="@color/teal_700"
                        app:strokeWidth="2dp"
                        android:textSize="18sp"
                        android:textAllCaps="false"
                        android:text="@string/dell_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</ScrollView>